common-applications/test-environment/opengauss-website-test/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: opengauss-website
  name: opengauss-website
