common-applications/test-environment/opengauss-website-test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com; object-src 'none'; frame-ancestors https://vhall.huawei.com";
  name: opengauss-website-ingress
  namespace: opengauss-website
  labels: 
    app: opengauss-website
spec:
  tls:
    - hosts:
        - opengauss.test.osinfra.cn
      secretName: opengauss-website-tls
  rules:
    - host: opengauss.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: opengauss-website-service
              servicePort: 80
            path: /
